compiler/tests/schema/error/struct_nothing.bond

//this bond file is invalid; do not use as example


namespace tests

struct BasicTypes
{
     0: bool _bool;
}

struct Test
{
     0: BasicTypes bt = nothing;
}